--- a/readme
+++ b/readme
@@ -1,7 +1,1 @@
-Git is a distributed version control system.
-Git is free software distributed under the GPL.
-fuck
-Git is a distributed version control system.
-Git is free software distributed under the GPL.
-Git has a mutable index called stage.
-Git tracks changes.
+Homework for course data structue in SJTU.
